# cmake_samples

./: CMakeLists.txt  makefile
hello/: CMakeLists.txt  hello.cpp
library_link_sample/lib/: CMakeLists.txt  shared_lib.cpp  static_lib.cpp  static_lib.h
library_link_sample/main/: CMakeLists.txt  main.cpp
link_shared/lib/: CMakeLists.txt  lib.cpp  lib.h
link_shared/main/: CMakeLists.txt
